@@ -873,7 +873,7 @@ generating HTML output.
 <H3>ERRnnn: Messages</H3>
 
 <P>The <CODE>ERRnnn:</CODE> messages specify an error condition.
-Error numbers 1 to 13 map to the following errors:
+Error numbers 1 to 14 map to the following errors:
 
 <OL>
 
@@ -903,6 +903,9 @@ Error numbers 1 to 13 map to the following errors:
 	<LI><I>HTMLDOC</I> was unable to write a file.</LI>
 
 	<LI>A HTML error was found in a source file.</LI>
+
+	<LI>A table, image, or text fragment was too large to
+	fit in the space provided.</LI>
 
 </OL>
 
